--- a/css/styles.css
+++ b/css/styles.css
@@ -215,25 +215,6 @@ img {
   background-color: var(--bcg-main-color);
 }
 
-.logo--footer {
-  display: block;
-  margin-bottom: 20px;
-}
-
-.welcome-title {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--primary-white-color);
-  margin-bottom: 20px;
-}
-
-.welcome-box {
-  margin-right: 93px;
-}
-
 .container.box {
   display: flex;
   align-items: baseline;
@@ -243,11 +224,89 @@ img {
   margin-right: 70px;
 }
 
-.footer-list {
+/* =========== Logo Footer =========== */
+
+.logo--footer {
+  display: block;
+  margin-bottom: 20px;
+}
+.color-studio {
+  color: var(--primary-white-color);
+}
+
+/* =========== Address Footer =========== */
+
+.address {
+  display: inline-block;
+  width: 231px;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.address__street {
+  display: inline-block;
+  margin-bottom: 9px;
+  color: var(--primary-white-color);
+  background: #2f303a;
+}
+
+.address__mail,
+.address__phone {
+  display: inline-block;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.6);
+
+  transform: scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.address__mail {
+  margin-bottom: 9px;
+}
+
+.address__mail:hover,
+.address__mail:focus {
+  color: var(--accent-color);
+
+  transform: scale(1.1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.address__phone:hover,
+.address__phone:focus {
+  color: var(--accent-color);
+
+  transform: scale(1.1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* =========== Join Box Footer =========== */
+
+.join-box {
+  margin-right: 93px;
+}
+
+.join__title {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-white-color);
+  margin-bottom: 20px;
+}
+
+.join {
   display: flex;
 }
 
-.link-footer {
+.join__item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.join__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -261,78 +320,33 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-item:not(:last-child) {
-  margin-right: 10px;
-}
-
-.link-footer:hover,
-.link-footer:focus {
+.join__link:hover,
+.join__link:focus {
   background-color: var(--accent-color);
 
   transform: scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-footer {
+.join__icon {
   display: flex;
   justify-content: center;
   align-items: center;
   fill: var(--primary-white-color);
 }
 
-.color-studio {
-  color: var(--primary-white-color);
-}
-
-.address {
-  display: inline-block;
-  width: 231px;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-.address .street {
-  display: inline-block;
-  margin-bottom: 9px;
-  color: var(--primary-white-color);
-  background: #2f303a;
-}
-
-.address .mail,
-.address .phone {
-  display: inline-block;
-  text-decoration: none;
-  color: rgba(255, 255, 255, 0.6);
-
-  transform: scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.address .mail {
-  margin-bottom: 9px;
-}
-
-.address .mail:hover,
-.address .mail:focus {
-  color: var(--accent-color);
-
-  transform: scale(1.1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.address .phone:hover,
-.address .phone:focus {
-  color: var(--accent-color);
-
-  transform: scale(1.1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 /* =========== Footer subscribe =========== */
 
-.subscribe label {
+.subscribe {
+  display: flex;
+  align-items: flex-end;
+}
+
+.subscribe__box {
+  margin-right: 12px;
+}
+
+.subscribe__label {
   display: block;
   font-weight: bold;
   font-size: 14px;
@@ -344,15 +358,27 @@ img {
   margin-bottom: 20px;
 }
 
-.subscribe {
-  display: flex;
-  align-items: flex-end;
+.subscribe__input {
+  width: 358px;
+  height: 50px;
+  /* margin-right: auto; */
+  padding: 15px 16px;
+  background-color: inherit;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
 }
 
-.subscribe-field {
-  margin-right: 12px;
+.subscribe__input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
-.subscribe-button {
+
+.subscribe__button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -376,43 +402,23 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-send {
-  margin-left: 10px;
-}
-
-.subscribe-button:hover,
-.subscribe-button:focus {
+.subscribe__button:hover,
+.subscribe__button:focus {
   background-color: #1976d2;
 
   transform: scale(1.1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.subscribe-input {
-  width: 358px;
-  height: 50px;
-  /* margin-right: auto; */
-  padding: 15px 16px;
-  background-color: inherit;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-}
-
-.subscribe-input::placeholder {
-  font-size: 16px;
-  line-height: 1.25;
-  align-items: center;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
+.subscribe__icon {
+  margin-left: 10px;
 }
 
 /* ============== Hero ============== */
 
 /* =========== Overlay =========== */
 
-.overlay {
+.hero__overlay {
   height: 600px;
   max-width: 1600px;
   margin-left: auto;
@@ -434,7 +440,7 @@ img {
   background-color: var(--bcg-main-color);
 }
 
-.hero-title {
+.hero__title {
   margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
@@ -445,9 +451,9 @@ img {
   color: var(--primary-white-color);
 }
 
-/* =========== Button =========== */
+/* =========== Hero Button =========== */
 
-.main-btn {
+.hero__btn {
   padding: 10px 32px;
   border: 0px;
   border-radius: 4px;
@@ -466,16 +472,12 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.main-btn:hover,
-.main-btn:focus {
+.hero__btn:hover,
+.hero__btn:focus {
   background-color: #1976d2;
 
   transform: scale(1.1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button-service {
-  cursor: pointer;
 }
 
 /* =========== Features =========== */
@@ -753,19 +755,19 @@ img {
   padding-bottom: 94px;
 }
 
-/* =========== Portfolio Button =========== */
+/* =========== Filter Button =========== */
 
-.portfolio-list {
+.filter-list {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
 }
 
-.portfolio-list .item + .item {
+.filter-list__item {
   margin-left: 8px;
 }
 
-.btn-filter {
+.filter-list__btn {
   padding: 6px 22px;
   background: var(--bcg-secondary);
   border: 0px;
@@ -784,8 +786,8 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-filter:hover,
-.btn-filter:focus {
+.filter-list__btn:hover,
+.filter-list__btn:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   box-shadow: 0 3px 1px 0 rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -797,37 +799,49 @@ img {
 
 /* =========== Portfolio section =========== */
 
-.portfolio {
+.projects {
   display: flex;
   flex-wrap: wrap;
 }
 
-.element:hover,
-.element:focus {
+.projects__item:hover,
+.projects__item:focus {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.portfolio-photo {
-  display: block;
-  overflow: hidden;
-}
 
-.element {
+.projects__item {
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
   overflow: hidden;
 }
 
-.element:nth-child(3n) {
+.projects__item:nth-child(3n) {
   margin-right: 0px;
 }
 
-.element:nth-last-child(-n + 3) {
+.projects__item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
 }
 
-.porfolio-title {
+.project__link {
+  text-decoration: none;
+}
+
+.project__image {
+  display: block;
+  overflow: hidden;
+}
+
+.project__border {
+  padding: 20px 24px;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+}
+
+.project__title {
   font-weight: bold;
   font-size: 18px;
   line-height: 2;
@@ -835,13 +849,7 @@ img {
   color: var(--title-text-color);
 }
 
-.portfolio-card {
-  padding: 20px 24px;
-  border-left: 1px solid #eeeeee;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-}
-.portfolio-project {
+.project__text {
   margin-top: 4px;
   font-size: 16px;
   line-height: 1.87;
@@ -851,12 +859,12 @@ img {
 
 /* ======= Выпадение окна с текстом в Портфолио ======= */
 
-.portfolio-thumb {
+.project__thumb {
   position: relative;
   overflow: hidden;
 }
 
-.thumb-info {
+.project__info {
   display: inline-block;
   position: absolute;
   padding-top: 63px;
@@ -879,7 +887,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-thumb:hover .thumb-info {
+.project__thumb:hover .project__info {
   transform: translateY(0%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 1;
@@ -899,7 +907,7 @@ img {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-hidden {
+.backdrop--is-hidden {
   opacity: 0;
   pointer-events: none;
 }
@@ -921,7 +929,7 @@ img {
   border-radius: 4px;
 }
 
-.backdrop.is-hidden .modal {
+.backdrop--is-hidden .modal {
   transform: translate(-50%, -50%) scale(1.1);
 }
 
@@ -939,7 +947,7 @@ img {
   cursor: pointer;
 }
 
-.icon-close {
+.close-modal__icon {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -948,13 +956,180 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.close-modal:hover .icon-close {
+.close-modal:hover .close-modal__icon {
   fill: var(--accent-color);
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.submit-button {
+.modal__title {
+  display: inline-block;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+  margin-bottom: 30px;
+}
+
+/* ============= Form-field ============= */
+
+.modal-form__input-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+}
+
+.modal-form__name {
+  display: block;
+  position: absolute;
+  top: -20px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+
+  margin-bottom: 4px;
+}
+
+.modal-form__input-box {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  margin-bottom: 28px;
+}
+
+.modal-form__input {
+  padding: 12px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  font-size: 16px;
+  height: 40px;
+
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form__input:hover,
+.modal-form__input:focus {
+  border-color: var(--accent-color);
+  outline-color: var(--accent-color);
+  outline: 1px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form__input:hover + .modal-form__input-icon,
+.modal-form__input:focus + .modal-form__input-icon {
+  fill: var(--accent-color);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form__comment-box {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.modal-form__textarea {
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+
+  cursor: pointer;
+  resize: none;
+  border-radius: 4px;
+}
+
+.modal-form__textarea:hover,
+.modal-form__textarea:focus {
+  border-color: var(--accent-color);
+  outline-color: var(--accent-color);
+  outline: 1px;
+  font-size: 16px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+::placeholder {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form__checkbox {
+  display: flex;
+  align-items: center;
+  width: 100%;
+
+  margin-bottom: 30px;
+}
+
+.modal-form__checkbox-input {
+  /* -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none; */
+
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0px;
+  padding: 0px;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.modal-form__contract {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+  text-decoration-skip-ink: none;
+}
+
+.modal-form__checkbox-icon {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--title-text-color);
+  border-radius: 2px;
+  margin-left: 13px;
+  margin-right: 8px;
+}
+
+.modal-form__icon-check {
+  position: absolute;
+  display: block;
+}
+
+.modal-form__checkbox-input:checked + .modal-form__checkbox-icon {
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+  background-size: contain;
+  background-origin: border-box;
+}
+
+.modal-form__label-checkbox {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.modal-form__submit {
   position: absolute;
   left: 50%;
   bottom: 40px;
@@ -978,181 +1153,9 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.submit-button:hover,
-.submit-button:focus {
+.modal-form__submit:hover,
+.modal-form__submit:focus {
   background-color: #1976d2;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-/* ============= Form-field ============= */
-
-.modal-title {
-  display: inline-block;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--title-text-color);
-  margin-bottom: 30px;
-}
-
-.modal-icon {
-  position: absolute;
-  top: 50%;
-  left: 12px;
-  transform: translateY(-50%);
-}
-
-.form-field {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  width: 100%;
-  margin-bottom: 28px;
-}
-
-.form-field input {
-  padding: 12px;
-  padding-left: 42px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  font-size: 16px;
-
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.field-comment {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  width: 100%;
-  margin-bottom: 20px;
-}
-
-.input-modal {
-  height: 40px;
-}
-
-.input-modal:hover,
-.input-modal:focus {
-  border-color: var(--accent-color);
-  outline-color: var(--accent-color);
-  outline: 1px;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.input-modal:hover + .modal-icon,
-.input-modal:focus + .modal-icon {
-  fill: var(--accent-color);
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.comment {
-  padding: 12px 16px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-
-  cursor: pointer;
-}
-
-.comment:hover,
-.comment:focus {
-  border-color: var(--accent-color);
-  outline-color: var(--accent-color);
-  outline: 1px;
-  font-size: 16px;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.label-modal {
-  position: absolute;
-  top: -20px;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: var(--primary-text-color);
-
-  margin-bottom: 4px;
-}
-
-textarea {
-  resize: none;
-  border-radius: 4px;
-}
-
-::placeholder {
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.checkbox-form {
-  display: flex;
-  align-items: center;
-  width: 100%;
-
-  margin-bottom: 30px;
-}
-
-.checkbox {
-  /* -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none; */
-
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0px;
-  padding: 0px;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.contract {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--accent-color);
-  text-decoration-skip-ink: none;
-}
-
-.icon-checkbox {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 16px;
-  height: 15px;
-  border: 2px solid var(--title-text-color);
-  border-radius: 2px;
-  margin-left: 13px;
-  margin-right: 8px;
-}
-
-.icon-check {
-  position: absolute;
-  display: block;
-}
-
-.checkbox:checked + .icon-checkbox {
-  background-color: var(--accent-color);
-  border-color: var(--accent-color);
-  background-size: contain;
-  background-origin: border-box;
-}
-
-.label-checkbox {
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #757575;
 }
